Added details page with first styling

--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -1,1 +1,11 @@
-<p>navigation works!</p>
+<nav class="navigation">
+  <div class="navigation__headline">
+    <h1>The big FakeStore</h1>
+    <p>Everything you need</p>
+  </div>
+  <div class="navigation__navbar">
+    <span>Clothings</span>
+    <span>Jewelery</span>
+    <span>Tech</span>
+  </div>
+</nav>
