--- a/src/app/navigation/navigation.component.scss
+++ b/src/app/navigation/navigation.component.scss
@@ -6,8 +6,7 @@
   font-family: "American Typewriter";
   background-color: aquamarine;
   height: 10vh;
-  padding: 0 100px;
-  margin-bottom: 2rem;
+  padding: 0 5vw;
   h1,p{
     margin: 0;
   }
