--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -3,4 +3,7 @@
     <h1>The big FakeStore</h1>
     <p>Everything you need</p>
   </div>
+  <button routerLink="/shopping-cart">Go to shopping cart</button>
+  <button routerLink="/">Go to products</button>
+
 </nav>
