--- a/src/app/product-detail/product-detail.component.scss
+++ b/src/app/product-detail/product-detail.component.scss
@@ -54,4 +54,14 @@
     border-radius: 5px;
     padding: 2rem;
   }
+  &__buttonComponent{
+    appearance: none;
+    border: none;
+    padding: 15px 30px;
+    background-color: greenyellow;
+    font-weight: bold;
+    box-shadow: 0 0 10px rgba(100,100,100,0.5);
+    cursor: pointer;
+  }
+
 }
