--- a/src/app/shopping-cart/shopping-cart.component.html
+++ b/src/app/shopping-cart/shopping-cart.component.html
@@ -13,7 +13,7 @@
             </span>
           </div>
         </div>
-      <p>Gesamtsumme: SUMME</p>
+      <p>Gesamtsumme: {{SUM}} €</p>
     </div>
     <div class="cartWrapper__formSection">
       <app-formular class="cartWrapper__buyFormular"></app-formular>
