Stopping and switching to redux

--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -7,7 +7,7 @@
     <button class="navigation__button" routerLink="/">PRODUCTS</button>
     <button class="navigation__button" routerLink="/shopping-cart">CART</button>
     <div class="navigation__shoppingCartBox" id="amountBox" [class.addedAmount]="">
-      <span class="navigation__shoppingCartAmount" id="amountNumber">{{shopItems.length}}</span>
+      <span class="navigation__shoppingCartAmount" >{{shopItems.length}}</span>
     </div>
   </div>
 </nav>
