--- a/src/app/navigation/navigation.component.scss
+++ b/src/app/navigation/navigation.component.scss
@@ -32,6 +32,9 @@
     width: 2rem;
     height: 2rem;
     border-radius: 50%;
+    position: absolute;
+    right: -1.5rem;
+    top: -1rem;
   }
   &__shoppingCartAmount{
     color: white;
