Fixed rest of tslint

--- a/src/app/shopping-cart/shopping-cart.component.html
+++ b/src/app/shopping-cart/shopping-cart.component.html
@@ -14,7 +14,7 @@
             <span class="cartWrapper__removeItemButton" (click)="removeFromCart(product.title)">x</span>
           </div>
         </div>
-      <p>Overall value: {{SUMME |async}} €</p>
+      <p>Overall value: {{OverallValue | async}} €</p>
     </div>
     <div class="cartWrapper__formSection">
       <app-formular class="cartWrapper__buyFormular"></app-formular>
